# WotionX

./: CMakeLists.txt  LICENSE  README.md  run.sh
doc/: Future_Features.md
inc/: cApp.h  cFrame.h  cPanel.h  db.h  elemParser.h
src/: cApp.cpp  cFrame.cpp  cPanel.cpp  db.cpp  elemParser.cpp
